--- a/package.json
+++ b/package.json
@@ -1,40 +1,88 @@
 {
-  "name": "murmuration",
+  "name": "murmation",
   "version": "1.0.0",
-  "description": "A project for scheduling resources",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
+  "description": "A project for sceduling resources",
+  "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/samkarp/murmuration.git"
+    "url": "https://github.com/samkarp/murmuration"
   },
   "keywords": [
-    "murmuration",
-    "resource",
-    "asset",
-    "schedule"
+    "gulp",
+    "react",
+    "browserify",
+    "seed",
+    "boilerplate",
+    "kickstarter",
+    "ES6",
+    "ES2015",
+    "babel",
+    "ava"
   ],
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  },
+  "scripts": {
+    "start": "npm run watch",
+    "watch": "gulp watch",
+    "build": "gulp build",
+    "deploy": "gulp deploy",
+    "test": "ava --tap | tap-nyan"
+  },
   "author": "The Dream Team",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/samkarp/murmuration/issues"
   },
   "homepage": "https://github.com/samkarp/murmuration#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-html-replace": "^1.6.1",
-    "gulp-react": "^3.1.0",
-    "gulp-uglify": "^2.0.0",
-    "node-static": "^0.7.8"
-  },
   "dependencies": {
-    "babel-core": "^6.14.0",
-    "jquery": "^3.1.1",
-    "marked": "^0.3.6",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "history": "^3.0.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^6.3.6",
+    "ava": "^0.15.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "babelify": "^7.3.0",
+    "browser-sync": "^2.12.5",
+    "browserify": "^13.0.0",
+    "cssnano": "^3.5.2",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^1.0.3",
+    "eslint-plugin-react": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-html-replace": "^1.5.5",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-uglify": "^1.5.3",
+    "imagemin-pngquant": "^5.0.0",
+    "lodash": "^4.11.1",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-extend": "^1.0.0",
+    "postcss-simple-vars": "^2.0.0",
+    "react-addons-test-utils": "^15.0.1",
+    "rimraf": "^2.5.2",
+    "run-sequence": "^1.1.5",
+    "tap-nyan": "0.0.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
