--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
+    "react-bootstrap": "^0.30.5",
     "leaflet":"^1.0.1"
   },
   "devDependencies": {
