--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/samkarp/murmuration#readme",
   "dependencies": {
     "axios": "^0.15.2",
+    "react-select":"^1.0.0-rc",
     "history": "^3.0.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
