--- a/package.json
+++ b/package.json
@@ -40,12 +40,16 @@
   "homepage": "https://github.com/samkarp/murmuration#readme",
   "dependencies": {
     "axios": "^0.15.2",
-    "react-select":"^1.0.0-rc",
     "history": "^3.0.0",
+    "moment": "^2.17.1",
     "react": "^15.0.1",
+    "react-big-calendar": "^0.12.3",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0",
     "react-bootstrap": "^0.30.5",
+    "react-select":"^1.0.0-rc",
     "leaflet":"^1.0.1",
     "leaflet-draw":"^0.4.9"
   },
