--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-bootstrap": "^0.30.5",
     "react-select":"^1.0.0-rc",
     "leaflet":"^1.0.1",
-    "leaflet-draw":"^0.4.9"
+    "leaflet-draw":"^0.4.9",
+    "lodash":"^4.17.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
